# NovelTrans

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.build.json  tsconfig.json
.github/workflows/: ci.yml  release.yml  tests.yml
docs/: ARCHITECTURE.md  TOTAL_PLANS.md  UI_UX_PLANS.md  UI_V2_PLAN.md  glossary.md  plugin_sdk.md
examples/: smoke_input.txt
examples/connectors/: example_connector.py
src/: index.ts
src/__tests__/: adapterCredential.test.ts  cliArgs.test.ts  cliHelp.test.ts  cliTranslate.test.ts  episodeSplitter.test.ts  glossaryQa.test.ts  keyboardLayout.test.ts  releaseWorkflow.test.ts  translationSession.test.ts  uiActions.test.ts  uiScreens.test.ts  uiV2Library.test.ts  uiV2Phase4.test.ts  uiV2Project.test.ts  uiV2Runtime.test.ts  uiV2Setup.test.ts  uiV2Source.test.ts  uiV2Triage.test.ts  uiV2UxFixes.test.ts  webImport.test.ts  workflow.test.ts
src/cli/: args.ts  commands.ts  render.ts
src/config/: configStore.ts  credentialStore.ts  defaultConfig.ts  modelPresets.ts
src/domain/: config.ts  episode.ts  glossary.ts  log.ts  project.ts  qa.ts  translation.ts
src/engine/: afterwordMarkers.ts  episodeLifecycle.ts  episodeSplitter.ts  episodeTranslation.ts  glossaryUpdate.ts  projectWorkflow.ts  singleEpisodeTranslation.ts  sourceAnalyzer.ts  translationOrchestrator.ts  translationSession.ts
tests/: test_cli_entrypoints.py  test_config_glossary_translator.py  test_connectors_policy_preprocessing.py  test_policy_registry_and_url_fallback.py  test_tui.py  test_workflow_exports.py
(+158 files in other folders)
