[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "noveltrans"
version = "1.0.9"
description = "Interactive terminal workflow for authorized Japanese web novel translation."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "NovelTrans Maintainers" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[dependency-groups]
dev = ["pytest>=8,<9"]

[project.scripts]
noveltrans = "noveltrans.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
noveltrans = ["data/*.txt"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
